--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npx prisma db push && npx prisma generate &&  next dev",
     "build": "npx prisma db push && npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
