made how it works section

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-masonry-css": "^1.0.16",
     "react-wrap-balancer": "^1.1.0",
     "sonner": "^1.0.3",
     "superjson": "^1.13.1",
