--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,15 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npx prisma db push && npx prisma generate &&  next dev",
+    "dev": "next dev",
     "build": "npx prisma db push && npx prisma generate && next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
-    "@prisma/client": "5.3.1",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -51,8 +49,5 @@
     "typescript": "5.2.2",
     "zod": "^3.22.2"
   },
-  "devDependencies": {
-    "prisma": "^5.3.1",
-    "zod-prisma": "^0.5.4"
-  }
+  "devDependencies": {}
 }
