--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
     "turbo": "^1.10.14",
     "typescript": "^5.2.2"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@harborx/prettier-config"
 }
