--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@harborx/api",
-    "version": "0.1.0",
+    "version": "0.0.0",
     "private": true,
     "main": "./index.ts",
     "types": "./index.ts",
@@ -12,26 +12,23 @@
       "typecheck": "tsc --noEmit"
     },
     "dependencies": {
-      "@harborx/auth": "^0.1.0",
-      "@harborx/db": "^0.1.0",
-      "@trpc/client": "^10.38.4",
-      "@trpc/server": "^10.38.4",
-      "superjson": "1.13.1",
+      "@harborx/auth": "workspace:*",
+      "@harborx/db": "workspace:*",
+      "@trpc/client": "^10.38.5",
+      "@trpc/server": "^10.38.5",
+      "superjson": "1.13.3",
       "zod": "^3.22.2"
     },
     "devDependencies": {
-      "@harborx/eslint-config": "^0.2.0",
-      "@harborx/prettier-config": "^0.1.0",
-      "@harborx/tsconfig": "^0.1.0",
+      "@harborx/eslint-config": "workspace:*",
+      "@harborx/tsconfig": "workspace:*",
       "eslint": "^8.50.0",
-      "prettier": "^3.0.3",
       "typescript": "^5.2.2"
     },
     "eslintConfig": {
       "root": true,
       "extends": [
-        "@harborx/eslint-config/base"
+        "@harborx/eslint-config"
       ]
-    },
-    "prettier": "@harborx/prettier-config"
-  }
+    }
+}
