--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,11 +10,10 @@
     },
     "dependencies": {
         "@prisma/client": "5.3.1"
-
     },
     "devDependencies": {
-        "prisma": "^4.2.1",
-        "zod-prisma": "^0.5.4",
-        "typescript": "4.7.4"
+        "prisma": "^5.3.1",
+        "typescript": "5.2.2",
+        "zod-prisma": "^0.5.4"
     }
 }
