edited accessing tsconfig package using @harborx/tsconfig dev dependecies for all packages throughout the application and updated package.json to use latest packages dependencies

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../packages/tsconfig/base.json", 
+  "extends": "@harborx/tsconfig/base.json", 
   "compilerOptions": {
     "target": "es5",
     "lib": [
