--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../tsconfig/base.json",
+    "extends": "@harborx/tsconfig/base.json",
     "compilerOptions": {
       "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
     },
