--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@harborx/tsconfig/base.json",
-  "include": ["index.ts"]
+  "include": ["index.ts"],
+  "exclude": ["node_modules"],
+  "compilerOptions": {
+    "composite": true
+  }
 }
