--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,34 +1,42 @@
 {
-    "name": "@harborx/api",
-    "version": "0.0.0",
-    "private": true,
-    "main": "./index.ts",
-    "types": "./index.ts",
-    "license": "MIT",
-    "scripts": {
-      "clean": "rm -rf .turbo node_modules",
-      "lint": "eslint .",
-      "format": "prettier --check \"**/*.{mjs,ts,md,json}\"",
-      "typecheck": "tsc --noEmit"
-    },
-    "dependencies": {
-      "@harborx/auth": "workspace:*",
-      "@harborx/db": "workspace:*",
-      "@trpc/client": "^10.38.5",
-      "@trpc/server": "^10.38.5",
-      "superjson": "1.13.3",
-      "zod": "^3.22.2"
-    },
-    "devDependencies": {
-      "@harborx/eslint-config": "workspace:*",
-      "@harborx/tsconfig": "workspace:*",
-      "eslint": "^8.50.0",
-      "typescript": "^5.2.2"
-    },
-    "eslintConfig": {
-      "root": true,
-      "extends": [
-        "@harborx/eslint-config"
-      ]
-    }
+  "name": "@harborx/api",
+  "version": "0.0.0",
+  "private": true,
+  "main": "./index.ts",
+  "types": "./index.ts",
+  "license": "MIT",
+  "scripts": {
+    "clean": "rm -rf .turbo node_modules",
+    "lint": "eslint .",
+    "format": "prettier --check \"**/*.{mjs,ts,md,json}\"",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^4.35.7",
+    "@trpc/react-query": "^10.38.5",
+    "@harborx/auth": "workspace:*",
+    "@harborx/db": "workspace:*",
+    "@trpc/client": "^10.38.5",
+    "@trpc/server": "^10.38.5",
+    "@trpc/next": "^10.38.5",
+    "react": "18.2.0",
+    "next": "13.5.3",
+    "superjson": "1.13.3",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@harborx/eslint-config": "workspace:*",
+    "@harborx/tsconfig": "workspace:*",
+    "@types/node": "20.8.0",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.8",
+    "eslint": "^8.50.0",
+    "typescript": "^5.2.2"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@harborx/eslint-config"
+    ]
+  }
 }
