api package imports and errors resolved

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,8 +1,19 @@
 {
     "extends": "@harborx/tsconfig/base.json",
     "compilerOptions": {
-      "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
+      "composite": true,
+      "incremental": true,
+      "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
+      "baseUrl": "."
     },
     "include": ["."],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "references": [
+      {
+        "path": "../db/tsconfig.json"
+      },
+      {
+        "path": "../auth/tsconfig.json"
+      }
+    ]
   }
