--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,15 +12,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.35.7",
-    "@trpc/react-query": "^10.38.5",
     "@harborx/auth": "workspace:*",
     "@harborx/db": "workspace:*",
+    "@prisma/client": "^5.3.1",
+    "@tanstack/react-query": "^4.35.7",
     "@trpc/client": "^10.38.5",
-    "@trpc/server": "^10.38.5",
     "@trpc/next": "^10.38.5",
-    "react": "18.2.0",
+    "@trpc/react-query": "^10.38.5",
+    "@trpc/server": "^10.38.5",
     "next": "13.5.3",
+    "next-auth": "^4.23.2",
+    "react": "18.2.0",
     "superjson": "1.13.3",
     "zod": "^3.22.2"
   },
