--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,17 +3,8 @@
     "compilerOptions": {
       "composite": true,
       "incremental": true,
-      "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
-      "baseUrl": "."
+      "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
     },
     "include": ["."],
-    "exclude": ["node_modules"],
-    "references": [
-      {
-        "path": "../db/tsconfig.json"
-      },
-      {
-        "path": "../auth/tsconfig.json"
-      }
-    ]
+    "exclude": ["node_modules"]
   }
