--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,36 +1,38 @@
 {
-    "name": "@harborx/auth",
-    "version": "0.0.0",
-    "private": true,
-    "main": "./index.ts",
-    "types": "./index.ts",
-    "license": "MIT",
-    "scripts": {
-      "clean": "rm -rf .turbo node_modules",
-      "lint": "eslint .",
-      "format": "prettier --check \"**/*.{mjs,ts,md,json}\"",
-      "typecheck": "tsc --noEmit"
-    },
-    "dependencies": {
-      "@harborx/db": "workspace:*",
-      "@t3-oss/env-nextjs": "^0.6.1",
-      "next": "^13.5.3",
-      "@clerk/nextjs": "^4.25.1",
-      "react": "18.2.0",
-      "react-dom": "18.2.0",
-      "zod": "^3.22.2"
-    },
-    "devDependencies": {
-      "@harborx/eslint-config": "workspace:*",
-      "@harborx/tsconfig": "workspace:*",
-      "@types/node": "20.8.0",
-      "eslint": "^8.50.0",
-      "typescript": "^5.2.2"
-    },
-    "eslintConfig": {
-      "root": true,
-      "extends": [
-        "@harborx/eslint-config"
-      ]
-    }
+  "name": "@harborx/auth",
+  "version": "0.0.0",
+  "private": true,
+  "main": "./index.ts",
+  "types": "./index.ts",
+  "license": "MIT",
+  "scripts": {
+    "clean": "rm -rf .turbo node_modules",
+    "lint": "eslint .",
+    "format": "prettier --check \"**/*.{mjs,ts,md,json}\"",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@auth/core": "^0.16.0",
+    "@auth/prisma-adapter": "^1.0.2",
+    "@harborx/db": "workspace:*",
+    "@t3-oss/env-nextjs": "^0.6.1",
+    "next": "^13.5.3",
+    "next-auth": "^4.23.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@harborx/eslint-config": "workspace:*",
+    "@harborx/tsconfig": "workspace:*",
+    "@types/node": "20.8.0",
+    "eslint": "^8.50.0",
+    "typescript": "^5.2.2"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@harborx/eslint-config"
+    ]
+  }
 }
