--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.25.1",
+    "@harborx/api": "workspace:*",
+    "@harborx/auth": "workspace:*",
+    "@harborx/db": "workspace:*",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -35,6 +37,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.279.0",
     "next": "13.5.3",
+    "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -46,10 +49,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.2",
-    "@harborx/db": "workspace:*",
-    "@harborx/api": "workspace:*",
-    "@harborx/auth": "workspace:*"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@harborx/eslint-config": "workspace:*",
