--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,10 +1,12 @@
 {
-    "extends": "@harborx/tsconfig/base.json",
-    "compilerOptions": {
-      "composite": true,
-      "incremental": true,
-      "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
-    },
-    "include": ["."],
-    "exclude": ["node_modules"]
-  }
+  "extends": "@harborx/tsconfig/base.json",
+  "compilerOptions": {
+    "composite": true,
+    "incremental": true,
+    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
+    "strictNullChecks": true,
+    "strict": true
+  },
+  "include": ["."],
+  "exclude": ["node_modules"]
+}
