feat: Full migration from clerk to next auth with implementation of it completed end to end, nice working loading states added, also update json files with respective needs

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "prisma studio",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push --skip-generate",
     "postinstall": "prisma generate"
   },
   "dependencies": {
