--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@harborx/tsconfig/base.json",
-  "include": ["index.ts"],
+  "include": ["."],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "composite": true
