--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -12,20 +12,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/core": "^0.16.0",
-    "@auth/prisma-adapter": "^1.0.2",
+    "@auth/core": "^0.16.1",
     "@harborx/db": "workspace:*",
+    "@next-auth/prisma-adapter": "1.0.7",
     "@t3-oss/env-nextjs": "^0.6.1",
-    "next": "^13.5.3",
+    "next": "^13.5.4",
     "next-auth": "^4.23.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.3"
   },
   "devDependencies": {
     "@harborx/eslint-config": "workspace:*",
     "@harborx/tsconfig": "workspace:*",
-    "@types/node": "20.8.0",
+    "@types/node": "20.8.2",
     "eslint": "^8.50.0",
     "typescript": "^5.2.2"
   },
