--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,10 +1,31 @@
 {
-    "extends": "@harborx/tsconfig/base.json",
-    "compilerOptions": {
-      "composite": true,
-      "incremental": true,
-      "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
-    },
-    "include": ["."],
-    "exclude": ["node_modules"]
+  "extends": "@harborx/tsconfig/base.json", 
+  "compilerOptions": {
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "target": "es5",
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
