--- a/turbo.json
+++ b/turbo.json
@@ -3,10 +3,11 @@
   "globalDependencies": ["**/.env"],
   "pipeline": {
     "topo": {
-      "dependsOn": ["^topo"]
+      "dependsOn": ["^topo","^db:generate"],
+      "cache": false
     },
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build","^db:generate"],
       "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts", ".expo/**"]
     },
     "dev": {
@@ -29,6 +30,12 @@
       "cache": false
     },
     "//#clean": {
+      "cache": false
+    },
+    "db:generate": {
+      "cache": false
+    },
+    "db:push": {
       "cache": false
     }
   },
