--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@harborx/tsconfig/base.json",
   "compilerOptions": {
+    "jsx": "react",
     "composite": true,
     "incremental": true,
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
