--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,14 +14,11 @@
   "dependencies": {
     "@harborx/auth": "workspace:*",
     "@harborx/db": "workspace:*",
-    "@prisma/client": "^5.3.1",
+    "@next/eslint-plugin-next": "^13.5.4",
     "@tanstack/react-query": "^4.35.7",
     "@trpc/client": "^10.38.5",
-    "@trpc/next": "^10.38.5",
     "@trpc/react-query": "^10.38.5",
     "@trpc/server": "^10.38.5",
-    "next": "13.5.3",
-    "next-auth": "^4.23.2",
     "react": "18.2.0",
     "superjson": "1.13.3",
     "zod": "^3.22.2"
