prettier removed cuz causing problem, added get computers and create computer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "harbor-x-turborepo",
+  "name": "harborx",
   "private": true,
   "engines": {
     "node": ">=v18.18.0"
@@ -22,6 +22,7 @@
     "@manypkg/cli": "^0.21.0",
     "@turbo/gen": "^1.10.14",
     "turbo": "^1.10.14",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   }
 }
