--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tee-harbor-x",
+  "name": "harborx-mainapp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@harborx/api": "workspace:*",
     "@harborx/auth": "workspace:*",
+    "@harborx/db":"workspace:*",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -23,6 +24,7 @@
     "@trpc/server": "^10.38.5",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.10",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -35,7 +37,6 @@
     "react-wrap-balancer": "^1.1.0",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.3"
   },
@@ -43,6 +44,16 @@
     "@harborx/eslint-config": "workspace:*",
     "@harborx/tsconfig": "workspace:*",
     "eslint": "^8.50.0",
+    "prettier": "^3.0.3",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.2.2"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@harborx/eslint-config/base",
+      "@harborx/eslint-config/nextjs",
+      "@harborx/eslint-config/react"
+    ]
   }
 }
