--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,10 +26,10 @@
   "devDependencies": {
     "@harborx/eslint-config": "workspace:*",
     "@harborx/tsconfig": "workspace:*",
-    "@types/node": "20.8.0",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "eslint": "^8.50.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "eslintConfig": {
