--- a/tooling/typescript/package.json
+++ b/tooling/typescript/package.json
@@ -2,6 +2,7 @@
   "name": "@harborx/tsconfig",
   "private": true,
   "version": "0.0.0",
+  "main": "base.json",
   "files": [
     "base.json"
   ]
