--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "@harborx/tsconfig/base.json",
-  "include": ["."],
-  "exclude": ["node_modules"],
   "compilerOptions": {
-    "composite": true
-  }
+    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
+  },
+  "include": ["."],
+  "exclude": ["node_modules"]
 }
