intialized shadcn in ui package

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,9 +8,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.284.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "3.3.2"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@harborx/eslint-config": "workspace:*",
