--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@harborx/shadcn":"workspace:*",
-    "@harborx/types":"workspace:*",
+    "@harborx/utils":"workspace:*",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
