--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -2,7 +2,7 @@
   "name": "@harborx/tailwind-config",
   "version": "0.0.0",
   "description": "",
-  "main": "tailwind.config.ts",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
