--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,33 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@harborx/tailwind-config":"workspace:*",
     "@harborx/api": "workspace:*",
     "@harborx/auth": "workspace:*",
-    "@harborx/db":"workspace:*",
-    "@harborx/ui":"workspace:*",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@harborx/db": "workspace:*",
+    "@harborx/ui": "workspace:*",
+    "@harborx/utils":"workspace:*",
+    "@harborx/shadcn":"workspace:*",
     "@trpc/server": "^10.38.5",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.10",
     "autoprefixer": "^10.4.16",
-    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
-    "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
-    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-wrap-balancer": "^1.1.0",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
