--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,12 +12,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.284.0",
     "next": "^13.5.4",
     "next-auth": "^4.23.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.3"
   },
