--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@harborx/api",
+  "name": "@turbocell/api",
   "version": "0.0.0",
   "private": true,
   "main": "./index.ts",
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@harborx/auth": "workspace:*",
-    "@harborx/db": "workspace:*",
+    "@turbocell/auth": "workspace:*",
+    "@turbocell/db": "workspace:*",
     "@next/eslint-plugin-next": "^13.5.4",
     "@tanstack/react-query": "^4.35.7",
     "@trpc/client": "^10.38.5",
@@ -24,8 +24,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@harborx/eslint-config": "workspace:*",
-    "@harborx/tsconfig": "workspace:*",
+    "@turbocell/eslint-config": "workspace:*",
+    "@turbocell/tsconfig": "workspace:*",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "eslint": "^8.50.0",
@@ -35,7 +35,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@harborx/eslint-config"
+      "@turbocell/eslint-config"
     ]
   }
 }
