--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@harborx/auth",
+  "name": "@turbocell/auth",
   "version": "0.0.0",
   "private": true,
   "main": "./index.ts",
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@harborx/db": "workspace:*",
+    "@turbocell/db": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
     "@t3-oss/env-nextjs": "^0.6.1",
     "next": "^13.5.4",
@@ -22,8 +22,8 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@harborx/eslint-config": "workspace:*",
-    "@harborx/tsconfig": "workspace:*",
+    "@turbocell/eslint-config": "workspace:*",
+    "@turbocell/tsconfig": "workspace:*",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
@@ -31,7 +31,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@harborx/eslint-config"
+      "@turbocell/eslint-config"
     ]
   }
 }
