--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@harborx/db",
+  "name": "@turbocell/db",
   "version": "0.0.0",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -21,13 +21,13 @@
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
-    "@harborx/eslint-config": "workspace:*",
-    "@harborx/tsconfig": "workspace:*"
+    "@turbocell/eslint-config": "workspace:*",
+    "@turbocell/tsconfig": "workspace:*"
   },
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@harborx/eslint-config"
+      "@turbocell/eslint-config"
     ]
   }
 }
