--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@harborx/shadcn",
+  "name": "@turbocell/shadcn",
   "version": "0.0.0",
   "description": "",
   "main": "index.ts",
@@ -9,8 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@harborx/tailwind-config":"workspace:*",
-    "@harborx/utils": "workspace:*",
+    "@turbocell/tailwind-config":"workspace:*",
+    "@turbocell/utils": "workspace:*",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -26,7 +26,7 @@
     "sonner": "^1.0.3"
   },
   "devDependencies": {
-    "@harborx/tsconfig": "workspace:*",
+    "@turbocell/tsconfig": "workspace:*",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
     "eslint": "^8.50.0",
