--- a/packages/shadcn/tsconfig.json
+++ b/packages/shadcn/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "@harborx/tsconfig/base.json",
+    "extends": "@turbocell/tsconfig/base.json",
     "compilerOptions": {
       "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
     },
