--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@harborx/ui",
+  "name": "@turbocell/ui",
   "version": "0.0.0",
   "main": "index.ts",
   "types": "index.ts",
@@ -8,37 +8,23 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@harborx/shadcn":"workspace:*",
-    "@harborx/utils":"workspace:*",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@turbocell/shadcn": "workspace:*",
+    "@turbocell/utils": "workspace:*",
     "autoprefixer": "^10.4.16",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-wrap-balancer": "^1.1.0",
     "sonner": "^1.0.3",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@harborx/eslint-config": "workspace:*",
-    "@harborx/tailwind-config": "workspace:*",
-    "@harborx/tsconfig": "workspace:*",
+    "@turbocell/eslint-config": "workspace:*",
+    "@turbocell/tailwind-config": "workspace:*",
+    "@turbocell/tsconfig": "workspace:*",
     "@types/node": "20.8.0",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
@@ -49,7 +35,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@harborx/eslint-config"
+      "@turbocell/eslint-config"
     ]
   }
 }
