--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@harborx/eslint-config",
+  "name": "@turbocell/eslint-config",
   "version": "0.2.0",
   "private": true,
   "license": "MIT",
@@ -28,7 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "devDependencies": {
-    "@harborx/tsconfig": "workspace:*",
+    "@turbocell/tsconfig": "workspace:*",
     "eslint": "^8.50.0",
     "typescript": "^5.2.2"
   },
