--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@harborx/tailwind-config",
+  "name": "@turbocell/tailwind-config",
   "version": "0.0.0",
   "description": "",
   "main": "index.ts",
@@ -11,11 +11,12 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@harborx/eslint-config": "workspace:*",
-    "@harborx/tsconfig": "workspace:*",
+    "@turbocell/eslint-config": "workspace:*",
+    "@turbocell/tsconfig": "workspace:*",
     "@types/node": "20.8.0",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
@@ -24,7 +25,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@harborx/eslint-config"
+      "@turbocell/eslint-config"
     ]
   }
 }
