--- a/turbo.json
+++ b/turbo.json
@@ -3,11 +3,11 @@
   "globalDependencies": ["**/.env"],
   "pipeline": {
     "topo": {
-      "dependsOn": ["^topo","^db:generate"],
+      "dependsOn": ["^topo", "^db:generate"],
       "cache": false
     },
     "build": {
-      "dependsOn": ["^build","^db:generate"],
+      "dependsOn": ["^build", "^db:generate"],
       "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts", ".expo/**"]
     },
     "dev": {
@@ -44,6 +44,10 @@
     "DISCORD_CLIENT_ID",
     "DISCORD_CLIENT_SECRET",
     "NEXTAUTH_SECRET",
-    "NEXTAUTH_URL"
+    "NEXTAUTH_URL",
+    "FACEBOOK_CLIENT_ID",
+    "FACEBOOK_CLIENT_SECRET",
+    "GOOGLE_CLIENT_ID",
+    "GOOGLE_CLIENT_SECRET"
   ]
 }
