resolved all errors while build, eslint enabled, fixed all eslint errors while build

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -27,7 +27,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@turbocell/eslint-config"
+      "@turbocell/eslint-config/base"
     ]
   }
 }
