--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -25,7 +25,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@turbocell/eslint-config"
+      "@turbocell/eslint-config/base"
     ]
   }
 }
