--- a/package.json
+++ b/package.json
@@ -23,6 +23,17 @@
     "@turbo/gen": "^1.10.14",
     "turbo": "^1.10.14",
     "prettier": "^3.0.3",
+    "@turbocell/eslint-config": "workspace:*",
+    "@turbocell/tsconfig": "workspace:*",
+    "eslint": "^8.50.0",
     "typescript": "^5.2.2"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@turbocell/eslint-config/base",
+      "@turbocell/eslint-config/nextjs",
+      "@turbocell/eslint-config/react"
+    ]
   }
 }
