--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -35,7 +35,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@turbocell/eslint-config"
+      "@turbocell/eslint-config/base"
     ]
   }
 }
