--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -31,7 +31,7 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@turbocell/eslint-config"
+      "@turbocell/eslint-config/base"
     ]
   }
 }
