--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@turbocell/tailwind-config":"workspace:*",
+    "@trpc/server": "^10.38.5",
     "@turbocell/api": "workspace:*",
     "@turbocell/auth": "workspace:*",
     "@turbocell/db": "workspace:*",
+    "@turbocell/shadcn": "workspace:*",
+    "@turbocell/tailwind-config": "workspace:*",
     "@turbocell/ui": "workspace:*",
-    "@turbocell/utils":"workspace:*",
-    "@turbocell/shadcn":"workspace:*",
-    "@trpc/server": "^10.38.5",
+    "@turbocell/utils": "workspace:*",
     "@types/react": "18.2.27",
     "@types/react-dom": "18.2.10",
     "autoprefixer": "^10.4.16",
@@ -25,6 +25,7 @@
     "next-auth": "^4.23.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "sonner": "^1.0.3",
     "zod": "^3.22.3"
   },
