--- a/apps/express-server/tsconfig.json
+++ b/apps/express-server/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "@turbocell/tsconfig/base.json",
   "compilerOptions": {
-    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
+    "module": "CommonJS",
+    "lib": ["ES2015"],
+    "rootDir": "./src",
     "baseUrl": "src"
   },
-  "include": ["."],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
-
