using formidable package and DOM in tsconfig to access browser env packages

--- a/apps/express-server/tsconfig.json
+++ b/apps/express-server/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@turbocell/tsconfig/base.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "lib": ["ES2015"],
+    "lib": ["ES2015", "DOM"],
     "rootDir": "./src",
     "baseUrl": "src"
   },
