--- a/apps/express-server/package.json
+++ b/apps/express-server/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@turbocell/api": "workspace:*",
     "@turbocell/db": "workspace:*",
+    "@types/formidable": "^3.4.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "helmet": "^7.0.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
