--- a/apps/express-server/package.json
+++ b/apps/express-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register ./src/index.ts",
-    "start": "nodemon -r tsconfig-paths/register ./src/index.ts",
+    "start": "node -r tsconfig-paths/register ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "formidable": "^3.5.1",
     "helmet": "^7.0.0",
     "js-cookie": "^3.0.5",
