--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,33 +1,37 @@
-# The web Dockerfile is copy-pasted into our main docs at /docs/handbook/deploying-with-docker.
-# Make sure you update this Dockerfile, the Dockerfile in the web workspace and copy that over to Dockerfile in the docs.
+FROM ubuntu:22.04 AS base
 
-FROM node:lts-alpine AS builder
+RUN apt-get update && apt-get install -y curl ca-certificates
 
+RUN mkdir /usr/local/nvm
+ENV NVM_DIR /usr/local/nvm
+ENV NODE_VERSION 20.6.1
 
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
-RUN apk add --no-cache python3 make g++
-RUN apk update
+RUN curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash \
+    && . $NVM_DIR/nvm.sh \
+    && nvm install $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
+    && nvm use default
+
+ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
+ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
+
+FROM base as builder
+ENV PNPM_HOME="/root/.local/share/pnpm"
+ENV PATH="${PATH}:${PNPM_HOME}"
 # Set working directory
 WORKDIR /app
-ENV PNPM_HOME="/root/.local/share/pnpm"
-ENV PATH="${PATH}:${PNPM_HOME}"
-RUN npm install --global pnpm@8.6.0
+RUN npm install --global pnpm@8.7.5
 RUN pnpm add -g turbo
 COPY . .
-RUN turbo prune --scope=turbocell-mainapp --docker
+RUN turbo prune turbocell-mainapp --docker
 
 # Add lockfile and package.json's of isolated subworkspace
-FROM node:lts-alpine AS installer
-RUN apk add --no-cache libc6-compat
-RUN apk add --update openssl
-RUN apk add --no-cache python3 make g++
-RUN apk update
+FROM base AS installer
 
 ENV PNPM_HOME="/root/.local/share/pnpm"
 ENV PATH="${PATH}:${PNPM_HOME}"
 
-RUN npm install --global pnpm@8.6.0
+RUN npm install --global pnpm@8.7.5
 
 WORKDIR /app
 
@@ -35,55 +39,26 @@ WORKDIR /app
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+
+COPY --from=builder /app/out/full/ .
 COPY turbo.json turbo.json
 
 RUN pnpm i
 
-# Build the project and its dependencies
+RUN pnpm turbo run build --filter=turbocell-mainapp...
 
-# Uncomment and use build args to enable remote caching
-# ARG TURBO_TEAM
-# ENV TURBO_TEAM=$TURBO_TEAM
-
-# ARG TURBO_TOKEN
-# ENV TURBO_TOKEN=$TURBO_TOKEN
-
-###
-
-# Validate vars
-ARG ENVIRONMENT
-ENV ENVIRONMENT=$ENVIRONMENT
-ARG DATABASE_URL
-ENV DATABASE_URL=$DATABASE_URL
-ARG DISCORD_CLIENT_ID
-ENV DISCORD_CLIENT_ID=$DISCORD_CLIENT_ID
-ARG DISCORD_CLIENT_SECRET
-ENV DISCORD_CLIENT_SECRET=$DISCORD_CLIENT_SECRET
-ARG NEXT_PUBLIC_SITE_URL
-ENV NEXT_PUBLIC_SITE_URL=$NEXT_PUBLIC_SITE_URL
-ARG NEXT_PUBLIC_DEPLOYMENT_ENV
-ENV NEXT_PUBLIC_DEPLOYMENT_ENV=$NEXT_PUBLIC_DEPLOYMENT_ENV
-
-
-###
-
-RUN pnpm turbo run build --filter=web...
-
-FROM node:lts-alpine AS runner
+FROM base AS runner
 
 ENV PNPM_HOME="/root/.local/share/pnpm"
 ENV PATH="${PATH}:${PNPM_HOME}"
 
-RUN npm install --global pnpm@8.6.0
+RUN npm install --global pnpm@8.7.5
 
 WORKDIR /app
 
-ENV NODE_ENV="production"
-ENV NODE_OPTIONS="--enable-source-maps --max_old_space_size=4096"
-
 # Don't run production as root
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
+RUN groupadd --system --gid 1001 nextjs
+RUN useradd --system --uid 1001 nodejs
 USER nextjs
 COPY --from=installer /app .
 
