--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,15 +15,16 @@ services:
   #   ports:
   #     - 6606:3306
   web:
+    env_file: .env
     container_name: web
     build:
       context: .
       dockerfile: ./apps/web/Dockerfile
     restart: always
     expose:
-      - 3001
+      - 3000
     ports:
-      - 3001:3001
+      - 3000:3000
   # express-server:
   #   container_name: express-server
   #   build:
