dockerfile for express app and modification in scripts...

--- a/apps/express-server/package.json
+++ b/apps/express-server/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon -r tsconfig-paths/register ./src/index.ts",
-    "start": "node -r tsconfig-paths/register ./src/index.ts",
+    "build": "tsc && tsc-alias ./src/index.ts",
+    "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
+    "clean": "rm -rf dist && rm -rf tsconfig.tsbuildinfo",
+    "dev": "nodemon --noEmit --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
+    "lint": "tsc --noEmit && eslint \"src/**/*.ts*\"",
+    "start": "node -r esbuild-register ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -39,10 +43,13 @@
     "@types/express-session": "^1.17.8",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.8.0",
+    "concurrently": "^8.2.2",
+    "esbuild": "^0.14.38",
+    "esbuild-register": "^3.3.2",
     "eslint": "^8.50.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
