--- a/apps/express-server/Dockerfile
+++ b/apps/express-server/Dockerfile
@@ -1,61 +1,52 @@
-FROM node:lts-alpine AS base
+FROM node:18-alpine AS base
+RUN apk update
+RUN apk add --no-cache libc6-compat
 
 # The web Dockerfile is copy-pasted into our main docs at /docs/handbook/deploying-with-docker.
 # Make sure you update this Dockerfile, the Dockerfile in the web workspace and copy that over to Dockerfile in the docs.
 
 FROM base AS builder
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
-RUN apk update
-# Set working directory
-WORKDIR /app
 ENV PNPM_HOME="/root/.local/share/pnpm"
 ENV PATH="${PATH}:${PNPM_HOME}"
-RUN npm install --global pnpm@8.7.5
+WORKDIR /app
+RUN npm install -g pnpm@8.7.5
 RUN pnpm add -g turbo
 COPY . .
-RUN turbo prune --scope=@turbocell/express-server --docker
+RUN turbo prune @turbocell/express-server --docker
 
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
-RUN apk add --no-cache libc6-compat
-RUN apk update
-
 ENV PNPM_HOME="/root/.local/share/pnpm"
 ENV PATH="${PATH}:${PNPM_HOME}"
 
+RUN npm install --global pnpm@8.7.5
 WORKDIR /app
 
 # First install dependencies (as they change less often)
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
-COPY --from=builder /app/out/pnpm-lock.yml ./pnpm-lock.yml
-COPY turbo.json turbo.json
-RUN pnpm install
+COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
 
-# Build the project and its dependencies
 COPY --from=builder /app/out/full/ .
+COPY turbo.json turbo.json
 
-# Uncomment and use build args to enable remote caching
-# ARG TURBO_TEAM
-# ENV TURBO_TEAM=$TURBO_TEAM
-
-# ARG TURBO_TOKEN
-# ENV TURBO_TOKEN=$TURBO_TOKEN
+RUN pnpm i
 
 RUN pnpm turbo run build --filter=@turbocell/express-server...
 
 FROM base AS runner
+
 ENV PNPM_HOME="/root/.local/share/pnpm"
 ENV PATH="${PATH}:${PNPM_HOME}"
 
 RUN npm install --global pnpm@8.7.5
+
 WORKDIR /app
 
 # Don't run production as root
-RUN addgroup --system --gid 1001 expressjs
-RUN adduser --system --uid 1001 expressjs
-USER expressjs
+RUN addgroup --system --gid 1001 express
+RUN adduser --system --uid 1001 express
+USER express
 COPY --from=installer /app .
 
 CMD cd apps/express-server/ && pnpm start
