--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # use  openssl rand -base64 32
 NEXTAUTH_SECRET=
+EXPRESS_SECRET=
 
 # get keys from https://console.cloud.google.com/
 GOOGLE_CLIENT_ID=
@@ -18,5 +19,3 @@ DISCORD_CLIENT_SECRET=
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 
-
-NODE_ENV = "development"
