migrating from mysql to postgres db and some db:push fixes and some other fixes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
-DATABASE_URL=mysql://....?sslaccept=strict
+DATABASE_URL=postgresql://dev:dev@localhost:5432/turbocell?schema=public
 
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
@@ -16,6 +16,7 @@ GOOGLE_CLIENT_SECRET=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
+# get keys from https://developers.facebook.com/apps
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 
