--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -13,13 +13,8 @@
   },
   "dependencies": {
     "@turbocell/db": "workspace:*",
-    "@next-auth/prisma-adapter": "1.0.7",
-    "@t3-oss/env-nextjs": "^0.6.1",
-    "next": "^13.5.4",
-    "next-auth": "^4.23.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zod": "^3.22.3"
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "next-auth": "5.0.0-beta.3"
   },
   "devDependencies": {
     "@turbocell/eslint-config": "workspace:*",
