--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,13 +17,13 @@
     "@turbocell/tailwind-config": "workspace:*",
     "@turbocell/ui": "workspace:*",
     "@turbocell/utils": "workspace:*",
-    "@types/react": "18.2.27",
-    "@types/react-dom": "18.2.10",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
     "next": "13.5.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-query": "^3.39.3",
     "sonner": "^1.0.3",
     "zod": "^3.22.3"
