--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,8 +16,8 @@
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "sonner": "^1.0.3",
     "tailwindcss": "3.3.2"
   },
@@ -26,8 +26,8 @@
     "@turbocell/tailwind-config": "workspace:*",
     "@turbocell/tsconfig": "workspace:*",
     "@types/node": "20.8.0",
-    "@types/react": "^18.2.27",
-    "@types/react-dom": "^18.2.11",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
