--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -22,13 +22,13 @@
     "class-variance-authority": "^0.7.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.284.0",
-    "react": "18.2.0",
+    "react": "^18",
     "sonner": "^1.0.3"
   },
   "devDependencies": {
     "@turbocell/tsconfig": "workspace:*",
-    "@types/react": "18.2.27",
-    "@types/react-dom": "^18.2.11",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
