--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,29 +1,24 @@
 {
-  "extends": "@turbocell/tsconfig/base.json",
+  "extends": "@turbocell/tsconfig/nextjs.json",
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "plugins": [
       {
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./*"]
-    },
-    "baseUrl": "./"
+    "strictNullChecks": true
   },
-  "include": [".", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    ".",
+    "next.config.js",
+    "next-env.d.ts",
+    "postcss.config.cjs",
+    "tailwind.config.ts",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
+  ]
 }
