--- a/tooling/tailwind/tsconfig.json
+++ b/tooling/tailwind/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "@turbocell/tsconfig/base.json",
   "compilerOptions": {
+    "allowJs": true,
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
-  "include": ["."],
+  "include": ["index.ts", "postcss.js"],
   "exclude": ["node_modules"]
 }
