--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
-    "next": "13.5.4",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@turbocell/eslint-config": "workspace:*",
     "@turbocell/tsconfig": "workspace:*",
+    "@types/node": "20.8.0",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
     "tailwindcss": "3.3.2",
