--- a/turbo.json
+++ b/turbo.json
@@ -3,12 +3,32 @@
   "globalDependencies": ["**/.env"],
   "pipeline": {
     "topo": {
-      "dependsOn": ["^topo", "^db:generate"],
+      "dependsOn": ["^topo"],
       "cache": false
     },
     "build": {
-      "dependsOn": ["^build", "^db:generate"],
-      "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts", ".expo/**"]
+      "dependsOn": ["^build", "@turbocell/db#db:generate"],
+      "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts", ".expo/**"],
+      "env": [
+        "DATABASE_URL",
+        "EMAIL_SERVER_HOST",
+        "EMAIL_SERVER_PORT",
+        "EMAIL_SERVER_USER",
+        "EMAIL_SERVER_PASSWORD",
+        "EMAIL_FROM",
+        "NEXTAUTH_URL",
+        "NEXT_PUBLIC_APP_URL",
+        "VERCEL_ENV",
+        "NODE_ENV",
+        "NEXT_PUBLIC_DEPLOYMENT_ENV",
+        "NEXTAUTH_JWT_SECRET",
+        "NEXTAUTH_SECRET",
+        "EXPRESS_SECRET",
+        "GOOGLE_CLIENT_ID",
+        "GOOGLE_CLIENT_SECRET",
+        "DISCORD_CLIENT_ID",
+        "DISCORD_CLIENT_SECRET"
+      ]
     },
     "dev": {
       "persistent": true,
