--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,6 @@
 packages:
   - 'apps/web'
-  # - 'apps/dashboard'
-  # - 'apps/express-server'
+  - 'apps/dashboard'
+  - 'apps/express-server'
   - 'packages/*'
   - 'tooling/*'
