--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,9 @@
     "**/.vercel": true,
     "**/dist": true
   },
-  "tailwindCSS.experimental.classRegex": [["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]],
+  "tailwindCSS.experimental.classRegex": [
+    ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
+  ],
   "editor.quickSuggestions": {
     "strings": true
   }
