--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,14 +21,18 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.10.7",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@turbocell/utils": "workspace:*",
     "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
@@ -38,7 +42,9 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-wrap-balancer": "^1.1.0",
     "sonner": "^1.0.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
