--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/node": "^20.10.4",
     "eslint-plugin-unused-imports": "^3.0.0"
   }
 }
