--- a/turbo.json
+++ b/turbo.json
@@ -7,8 +7,8 @@
       "cache": false
     },
     "build": {
-      "dependsOn": ["^build", "@turbocell/db#db:generate"],
-      "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts", ".expo/**"],
+      "dependsOn": ["^build"],
+      "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts"],
       "cache": false,
       "env": [
         "DATABASE_URL",
